--- a/main.html
+++ b/main.html
@@ -3,8 +3,8 @@
 
 <!-- If it helps, here are the locations of the different parts of the code. -->
 <!-- CSS starts on line 11 -->
-<!-- JS starts on line 413 -->
-<!-- HTML body starts on line 909 -->
+<!-- JS starts on line 415 -->
+<!-- HTML body starts on line 911 -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -98,10 +98,11 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                min-width: 250px;
             }
             
             #input-container {
-                display: flex; 
+                display: flex;
                 align-items: center;
                 width: 100%;
             }
@@ -117,6 +118,7 @@
                 height: 2em;
                 font-size: 12px;
                 padding: 2px 10px;
+                width: auto;
                 flex: 1;
             }
             
