--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         </div>
     </form>
 
-    <button id="mobile-search-toggle">&#x1F50D;</button>
+    <button id="mobile-search-toggle"><img
+            src="https://static.wixstatic.com/media/b655f3_c5c3997c9f884e8c909ecd2dc292d892~mv2.webp" alt="Search"
+            id="search-icon"></button>
 
     <!-- Person Info -->
     <!-- Displays information about people. -->
@@ -82,6 +84,13 @@
         <!-- Image -->
         <img id="map-image" alt="Woodland Cemetery"
             src="https://static.wixstatic.com/media/2aa8c6_2fe24813312b40b194d5f9d38326e05a~mv2.jpg">
+
+        <!-- Zoom Buttons Allows the user to zoom in and out of the map.
+            <div id="map-zoom">
+                <p id="zoom-in">+</p>
+                <p id="zoom-out">-</p>
+            </div> -->
+
 
         <!-- Polygons -->
         <svg id="map-highlights" viewBox="0 0 1632 866">
